# lab

./: README.md
Assets/Plugins/Android/: mainTemplate.gradle
Assets/Scenes/: Enemy.prefab  EnemyMovement.cs  EnemySpawner.cs  Game Over.unity  GameManager.cs  GameOverManager.cs  Main.unity  New Game.unity  SpaceSkybox.mat  VRShoot.cs
Assets/Scenes/Materials/: space_ship_test_color 1.mat  space_ship_test_color 2.mat  space_ship_test_color 3.mat  space_ship_test_color 4.mat  space_ship_test_color 5.mat  space_ship_test_color.mat
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Assets/Settings/Build Profiles/: Android™.asset
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
craftOS/: README.md  mine.lua  ore_miner.lua  scanner.lua  stockpile_client.lua
cube/: README.md  animations.py  ble_state.py  bluetooth.py  config.py  cube_state.py  giiker_parser.py  history.py  main.py  moves.py  shuffle.py  ui.py
snake/: README.md  draw.c  draw.h  input.c  input.h  main.c
vidTUI/: Cargo.toml  README.md
vidTUI/src/: main.rs  tmdb.rs  ui.rs  video.rs
