[package]
name = "vidtui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
fantoccini = { version = "0.21", default-features = false, features = ["rustls-tls"] }
urlencoding = "2"
anyhow = "1"
dirs = "5"
base64 = "0.21"
flate2 = "1"
tar = "0.4"
figlet-rs = "0.1"
libc = "0.2"
